*Empty MediaWiki Message*

--- a/Ding_lalawígan_ning_Filipínas.mw
+++ b/Ding_lalawígan_ning_Filipínas.mw
@@ -40,11 +40,11 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_bohol.png|30px]] || [[Bohol]] || [[Tagbilaran Lakanbalen]] || [[Kalibudatarang Visayas|Labuad VII]] || 1,137,268 || 4,117.3 || 276.2 
 |-
-|| [[Image:Ph_seal_bukidnon.png|30px]] || [[Bukidnon]] || [[Lakanbalen Malaybalay]] || [[Northern Mindanao|Labuad X]] || 1,060,265 || 8,293.8 || 127.8 
+|| [[Image:Ph_seal_bukidnon.png|30px]] || [[Bukidnon]] || [[Malaybalay Lakanbalen]] || [[Northern Mindanao|Labuad X]] || 1,060,265 || 8,293.8 || 127.8 
 |-
 || [[Image:Ph_seal_bulacan.png|30px]] || [[Bulacan]] || [[Malolos, Bulacan|Malolos]] || [[Kalibudatarang Luzon|Labuad III]] || 2,234,088 || 2,625.0 || 851.1 
 |-
-|| [[Image:Ph_seal_cagayan.png|30px]] || [[Cagayan]] || [[Lakanbalen Tuguegarao]] || [[Cagayan Valley|Labuad II]] || 993,580 || 9,002.7 || 110.4 
+|| [[Image:Ph_seal_cagayan.png|30px]] || [[Cagayan]] || [[Tuguegarao Lakanbalen]] || [[Cagayan Valley|Labuad II]] || 993,580 || 9,002.7 || 110.4 
 |-
 || [[Image:Ph_seal_camarines_norte.png|30px]] || [[Camarines Norte]] || [[Daet, Camarines Norte|Daet]] || [[Labuad Bicol |Labuad V]] || 458,840 || 2,112.5 || 217.2 
 |-
@@ -56,9 +56,9 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_catanduanes.png|30px]] || [[Catanduanes]] || [[Virac, Catanduanes|Virac]] || [[Labuad Bicol|Labuad V]] || 215,356 || 1,511.5 || 142.5 
 |-
-|| [[Image:Ph_seal_cavite.png|30px]] || [[Cavite]] || [[Trece Lakanbalen Martires]] || [[CALABARZON|Labuad IV-A]] || 2,063,161 || 1,287.6 || 1,602.3 
+|| [[Image:Ph_seal_cavite.png|30px]] || [[Cavite]] || [[Trece Martires Lakanbalen]] || [[CALABARZON|Labuad IV-A]] || 2,063,161 || 1,287.6 || 1,602.3 
 |-
-|| [[Image:Ph_seal_cebu.png|30px]] || [[Cebu]] || [[Cebu City]] || [[Central Visayas|Labuad VII]] || 3,356,137 || 5,088.4 || 659.6 
+|| [[Image:Ph_seal_cebu.png|30px]] || [[Cebu]] || [[Cebu Lakanbalen]] || [[Central Visayas|Labuad VII]] || 3,356,137 || 5,088.4 || 659.6 
 |-
 || [[Image:Ph_seal_compostela_valley.png|30px]] || [[Saug Compostela]] || [[Nabunturan, Compostela Valley|Nabunturan]] || [[Davao Region|Labuad XI]] || 580,244 || 4,667.0 || 124.3 
 |-
@@ -94,7 +94,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_lanao_del_sur.png|30px]] || [[Lanao del Sur]] || [[Marawi Lakanbalen]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 800,162 || 3,872.9 || 206.6 
 |-
-|| [[Image:Ph_seal_leyte.png|30px]] || [[Leyte]] || [[Tacloban City]] || [[Eastern Visayas|Labuad VIII]] || 1,592,336 || 5,712.8 || 278.7 
+|| [[Image:Ph_seal_leyte.png|30px]] || [[Leyte]] || [[Tacloban Lakanbalen]] || [[Eastern Visayas|Labuad VIII]] || 1,592,336 || 5,712.8 || 278.7 
 |-
 || [[Image:Ph_seal_maguindanao.png|30px]] || [[Maguindanao]] || [[Shariff Aguak, Maguindanao|Shariff Aguak]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 801,102 || 4,900.1 || 163.5 
 |-
@@ -124,7 +124,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_palawan.png|30px]] || [[Palawan]] || [[Puerto Princesa Lakanbalen]] || [[Western Visayas|Labuad VI]] || 755,412 || 14,896.3 || 50.7 
 |-
-|| [[Image:Ph_seal_pampanga.png|30px]] || [[Pampanga]] || [[Lakanbalen San Fernando, Pampanga|San Fernando City]] || [[Kalibudtarang Luzon|Labuad III]] || 1,882,730 || 2,180.7 || 863.4 
+|| [[Image:Ph_seal_pampanga.png|30px]] || [[Pampanga]] || [[San Fernando Lakanbalen, Pampanga|San Fernando City]] || [[Kalibudtarang Luzon|Labuad III]] || 1,882,730 || 2,180.7 || 863.4 
 |-
 || [[Image:Ph_seal_pangasinan.png|30px]] || [[Pangasinan]] || [[Lingayen, Pangasinan|Lingayen]] || [[Labuad Ilocos |Labuad I]] || 2,434,086 || 5,368.2 || 453.4 
 |-
@@ -160,7 +160,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_tawi-tawi.png|30px]] || [[Tawi-Tawi]] || [[Panglima Sugala, Tawi-Tawi|Panglima Sugala]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 322,317 || 1,087.4 || 296.4 
 |-
-|| [[Image:Ph_seal_zambales.png|30px]] || [[Zambales]] || [[Iba, Zambales|Iba]] || [[Kalibudatarang Luzon|Labuad III]] || 627,802 || 3,714.4 || 169.0 
+|| [[Image:Ph_seal_zambales.png|30px]] || [[Zambales]] || [[Iba, Zambales|Iba]] || [[Kalibudtarang Luzon|Labuad III]] || 627,802 || 3,714.4 || 169.0 
 |-
 || [[Image:Ph_seal_zamboanga_del_norte.png|30px]] || [[Zamboanga del Norte]] || [[Dipolog Lakanbalen]] || [[Zamboanga Peninsula|Labuad IX]] || 823,130 || 6,618.0 || 124.4 
 |-
