*Empty MediaWiki Message*

--- a/Ding_lalawígan_ning_Filipínas.mw
+++ b/Ding_lalawígan_ning_Filipínas.mw
@@ -38,7 +38,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_biliran.png|30px]] || [[Biliran]] || [[Naval, Biliran|Naval]] || [[Aslagan Visayas|Labuad VIII]] || 140,274 || 555.5 || 252.5 
 |-
-|| [[Image:Ph_seal_bohol.png|30px]] || [[Bohol]] || [[Tagbilaran Lakanbalen]] || [[Kalibudatarang Visayas|Labuad VII]] || 1,137,268 || 4,117.3 || 276.2 
+|| [[Image:Ph_seal_bohol.png|30px]] || [[Bohol]] || [[Tagbilaran Lakanbalen]] || [[Kalibudtarang Visayas|Labuad VII]] || 1,137,268 || 4,117.3 || 276.2 
 |-
 || [[Image:Ph_seal_bukidnon.png|30px]] || [[Bukidnon]] || [[Malaybalay Lakanbalen]] || [[Northern Mindanao|Labuad X]] || 1,060,265 || 8,293.8 || 127.8 
 |-
@@ -78,7 +78,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_ilocos_norte.png|30px]] || [[Ilocos Norte]] || [[Laoag Lakanbalen]] || [[Labuad Ilocos|Labuad I]] || 514,241 || 3,399.3 || 151.3 
 |-
-|| [[Image:Ph_seal_ilocos_sur.png|30px]] || [[Ilocos Sur]] || [[Lakanbalen Vigan]] || [[Labuad Ilocos|Labuad I]] || 594,206 || 2,579.6 || 230.3 
+|| [[Image:Ph_seal_ilocos_sur.png|30px]] || [[Ilocos Sur]] || [[Vigan Lakanbalen]] || [[Labuad Ilocos|Labuad I]] || 594,206 || 2,579.6 || 230.3 
 |-
 || [[Image:Ph_seal_iloilo.png|30px]] || [[Iloilo]] || [[Lakanbalen Iloilo]] || [[Western Visayas|Labuad VI]] || 1,925,002 || 4,719.4 || 407.9 
 |-
