*Empty MediaWiki Message*

--- a/Ding_lalawígan_ning_Filipínas.mw
+++ b/Ding_lalawígan_ning_Filipínas.mw
@@ -42,7 +42,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_bukidnon.png|30px]] || [[Bukidnon]] || [[Malaybalay Lakanbalen]] || [[Northern Mindanao|Labuad X]] || 1,060,265 || 8,293.8 || 127.8 
 |-
-|| [[Image:Ph_seal_bulacan.png|30px]] || [[Bulacan]] || [[Malolos, Bulacan|Malolos]] || [[Kalibudtarang Luzon|Labuad III]] || 2,234,088 || 2,625.0 || 851.1 
+|| [[Image:Ph_seal_bulacan.png|30px]] || [[Bulacan]] || [[Malolos Lakanbalen|Malolos]] || [[Kalibudtarang Luzon|Labuad III]] || 2,234,088 || 2,625.0 || 851.1 
 |-
 || [[Image:Ph_seal_cagayan.png|30px]] || [[Cagayan]] || [[Tuguegarao Lakanbalen]] || [[Cagayan Valley|Labuad II]] || 993,580 || 9,002.7 || 110.4 
 |-
