*Empty MediaWiki Message*

--- a/Ding_lalawígan_ning_Filipínas.mw
+++ b/Ding_lalawígan_ning_Filipínas.mw
@@ -44,7 +44,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_bulacan.png|30px]] || [[Bulacan]] || [[Malolos Lakanbalen|Malolos]] || [[Kalibudtarang Luzon|Labuad III]] || 2,234,088 || 2,625.0 || 851.1 
 |-
-|| [[Image:Ph_seal_cagayan.png|30px]] || [[Cagayan]] || [[Tuguegarao Lakanbalen]] || [[Cagayan Valley|Labuad II]] || 993,580 || 9,002.7 || 110.4 
+|| [[Image:Ph_seal_cagayan.png|30px]] || [[Cagayan]] || [[Tuguegarao Lakanbalen]] || [[Labuad Saug Cagayan|Labuad II]] || 993,580 || 9,002.7 || 110.4 
 |-
 || [[Image:Ph_seal_camarines_norte.png|30px]] || [[Camarines Norte]] || [[Daet, Camarines Norte|Daet]] || [[Labuad Bicol |Labuad V]] || 458,840 || 2,112.5 || 217.2 
 |-
