*Empty MediaWiki Message*

--- a/Ding_lalawígan_ning_Filipínas.mw
+++ b/Ding_lalawígan_ning_Filipínas.mw
@@ -156,7 +156,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_surigao_del_sur.png|30px]] || [[Surigao del Sur]] || [[Tandag, Surigao del Sur|Tandag]] || [[Caraga|Labuad XIII]] || 501,808 || 4,552.2 || 110.2 
 |-
-|| [[Image:Ph_seal_tarlac.png|30px]] || [[Tarlac]] || [[Lakanbalen Tarlac]] || [[Kalibudtarang Luzon|Labuad III]] || 1,068,783 || 3,053.4 || 350.0 
+|| [[Image:Ph_seal_tarlac.png|30px]] || [[Tarlac]] || [[Tarlac Lakanbalen]] || [[Kalibudtarang Luzon|Labuad III]] || 1,068,783 || 3,053.4 || 350.0 
 |-
 || [[Image:Ph_seal_tawi-tawi.png|30px]] || [[Tawi-Tawi]] || [[Panglima Sugala, Tawi-Tawi|Panglima Sugala]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 322,317 || 1,087.4 || 296.4 
 |-
