*Empty MediaWiki Message*

--- a/Ding_lalawígan_ning_Filipínas.mw
+++ b/Ding_lalawígan_ning_Filipínas.mw
@@ -80,7 +80,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_ilocos_sur.png|30px]] || [[Ilocos Sur]] || [[Vigan Lakanbalen]] || [[Labuad Ilocos|Labuad I]] || 594,206 || 2,579.6 || 230.3 
 |-
-|| [[Image:Ph_seal_iloilo.png|30px]] || [[Iloilo]] || [[Lakanbalen Iloilo]] || [[Western Visayas|Labuad VI]] || 1,925,002 || 4,719.4 || 407.9 
+|| [[Image:Ph_seal_iloilo.png|30px]] || [[Iloilo]] || [[Iloilo Lakanbalen]] || [[Western Visayas|Labuad VI]] || 1,925,002 || 4,719.4 || 407.9 
 |-
 || [[Image:Ph_seal_isabela.png|30px]] || [[Isabela|Isabela]] {{fn|1}} || [[Ilagan, Isabela|Ilagan]] || [[Cagayan Valley|Labuad II]] || 1,287,575 || 10,664.6 || 120.7 
 |-
