Категорија:Птице по државама

--- a/Category:Ayup_agpang_keng_bangsa.mw
+++ b/Category:Ayup_agpang_keng_bangsa.mw
@@ -19,6 +19,6 @@
 [[id:Kategori:Burung menurut negara]]
 [[la:Categoria:Aves civitate digestae]]
 [[pt:Categoria:Aves por país]]
-[[sr:Категорија:Птице по земљама]]
+[[sr:Категорија:Птице по државама]]
 [[tr:Kategori:Ülkelerine göre kuşlar]]
 [[uk:Категорія:Птахи за країною]]
