r2.6.5) (robot Modificado: [[fa:لئن]]

--- a/Leon.mw
+++ b/Leon.mw
@@ -118,7 +118,7 @@ Ing [[Leon (animal)]]
 [[es:León]]
 [[et:Leon]]
 [[eu:Leon]]
-[[fa:لئن (ابهام‌زدایی)]]
+[[fa:لئن]]
 [[fi:Leon]]
 [[fr:Léon]]
 [[gl:León]]
