*Empty MediaWiki Message*

--- a/Ekuador.mw
+++ b/Ekuador.mw
@@ -13,7 +13,7 @@
 |largest_city = [[Guayaquil, Ecuador|Guayaquil]]
 |government_type = [[Republic]]
 |leader_titles = [[List of Presidents of Ecuador|President]]<br />[[List of Vice-Presidents of Ecuador|Vice-President]]
-|leader_names =[[Alfredo Palacio]]<br />[[Alejandro Serrano]] 
+|leader_names =[[Rafael Correa]]<br />[[Lenin Moreno]] 
 |area_rank = 71st
 |area_magnitude = 1 E11
 |area=199,235
