Miurung la reng in-edit nang [[Special:Contributions/121.1.51.202|121.1.51.202]] ([[User talk:121.1.51.202|Pamisabi-sabi]]); binalik neng [[User:Val2397|Val2397]] king tauling bersion

--- a/After_the_Day's_Toil.mw
+++ b/After_the_Day's_Toil.mw
@@ -1,7 +1,9 @@
 ''Iting articulung iti menibat ya keng Inquirer makapetsa 10/07/2007''
 [[Image:After the Day's Toil.jpg|Ing pininta nang Vicente Alvarez Dizon, ing After the Day's Toil]]
 
-[[Menila]], [[Filipinas]] -- Kaibat ning  limang dekadang pamanintun, deng pamilya nang [[Vicente Alvarez Dizon]], ikit da ne ing pinta a menyambut at mika galal bilang mumunang dili king panginternational a ligligan inyang [[1939]] nung nu kayabe la ring bantug a [[Salvador Dali]] at [[Maurice Utrillo]].g obra maestra nang ning meangubie Dizon, "After the Day's Toil", a nung nu tauli deng ikit deng pamilya na inyang [[1952]] na dela re keng bangsa para keng "Philippine International Fair", atiu ngeni keng pibandian nang Dr. Rogelio Pine, metung a Filipinu cardiologist magdatun king [[New Jersey]], [[USA]].
+[[Menila]], [[Filipinas]] -- Kaibat ning  limang dekadang pamanintun, deng pamilya nang [[Vicente Alvarez Dizon]], ikit da ne ing pinta a menyambut at mika galal bilang mumunang dili king panginternational a ligligan inyang [[1939]] nung nu kayabe la ring bantug a [[Salvador Dali]] at [[Maurice Utrillo]].
+
+Ing obra maestra nang ning meangubie Dizon, "After the Day's Toil", a nung nu tauli deng ikit deng pamilya na inyang [[1952]] na dela re keng bangsa para keng "Philippine International Fair", atiu ngeni keng pibandian nang Dr. Rogelio Pine, metung a Filipinu cardiologist magdatun king [[New Jersey]], [[USA]].
 
 Y Pine seli ne iti inyang [[1980]] kang Daniel Grossman na ning Grossman Gallery, nung nu iya seli na neman keng IBM New York inyang ing kumpanya memisali yang dakal a pinta inyang katataulian ning [[1970]]'s. 
 
