--- a/Santo_Tomas,_Batangas.mw
+++ b/Santo_Tomas,_Batangas.mw
@@ -21,20 +21,20 @@ Ing Santo Tomas atin yang 30ng [[barangay]]:
 * San Francisco
 * San Isidro Norte
 * San Isidro Sur
-* San Joaquin
-* San Jose
+* San Joaquín
+* San José
 * San Juan
 </td><td valign=top>
 * San Luis
 * San Miguel
-* San Pablo \ Blenda
+* San Pablo
 * San Pedro
 * San Rafael
 * San Roque
 * San Vicente
 * Santa Ana
 * Santa Anastacia
-* Santa Clara \ Rodel
+* Santa Clara
 * Santa Cruz
 * Santa Elena
 * Santa Maria
