[[File:Castell del Papiol.jpg|thumb|right|Castell del Papiol]]

--- a/El_Papiol.mw
+++ b/El_Papiol.mw
@@ -7,7 +7,7 @@
  population_density=398 |
  elevation=135 |
  demonym=''n/a''}}
-
+[[File:Castell del Papiol.jpg|thumb|right|Castell del Papiol]]
 Ing '''El Papiol''' metung yang [[balen]] king [[Comarques of Catalonia|''comaerca'']] na ning [[Baix Llobregat]] king [[Catalonia]], [[Espanya]].  Atiu king kailing pampang ning [[Llobregat ilug]], keng A-7 [[Motorway|''autopista'']] manibat [[Valencia (city in Spain)|Valencia]] anggang [[La Jonquera]] ampong ing  C-1413 dalan manibat [[Sabadell]] anggang [[Molins de Rei]]. Keng albugan ing kayang sepu iyapin ing  [[Castellbisbal]] ampong [[Pallejà]], at king Pangulu keng Valldoreix ([[Sant Cugat del Vallès]]) ampong keng aslagan keng [[Molins de Rei]]. 
 
 == Demographicu ==
