r2.6.5) (robot Añadido: [[eml:Parì]]

--- a/Paris.mw
+++ b/Paris.mw
@@ -125,6 +125,7 @@ Ing '''Paris''' metung yang lakanbalen, a [[tungku]] ning [[France]], atiu king 
 [[diq:Paris]]
 [[dsb:Paris]]
 [[el:Παρίσι]]
+[[eml:Parì]]
 [[en:Paris]]
 [[eo:Parizo]]
 [[es:París]]
