--- a/Apalya.mw
+++ b/Apalya.mw
@@ -91,6 +91,7 @@
 * [http://www.itis.usda.gov/servlet/SingleRpt/SingleRpt?search_topic=TSN&search_value=22397 ITIS report]
 * [http://www.philippineherbalmedicine.org/ampalaya.htm Ampalaya (Momordica Charantia)]
 * [http://www.ampalayaherb.com Ampalaya (Momordica charantia) Herb]
+* [http://www.herbaldb.com/bitter-melon/20110503/what-is-bitter-melon-and-why-does-it-taste-the-way-it-does/ Herbal DB]
 * [http://www.bittermelon.org The National Bitter Melon Council]
 * [http://www1.charanteausa.com/bittermelonstudies/ Bitter Melon Studies]
 * [http://www.rbgkew.org.uk/efloras/namedetail.do;jsessionid=AE3DC0233E2A6B2EB06D41EB863E24B5?flora=fz&qry=key&taxon=3824&keyid=852 Detailed botanical description]
