--- a/Uzbekistan.mw
+++ b/Uzbekistan.mw
@@ -270,7 +270,7 @@ Ing '''Uzbekistan''' (alternately '''Uzbekstan''' or '''Ozbekistan'''), opisyal 
 [[ru:Узбекистан]]
 [[rw:Uzubekisitani]]
 [[sa:उजबेकिस्थान]]
-[[sah:Узбекистан]]
+[[sah:Узбекистаан]]
 [[scn:Uzbekistan]]
 [[sco:Uzbekistan]]
 [[se:Uzbekistána]]
