r2.6.5) (robot Modificado: [[sco:Miyagi Prefectur]]

--- a/Prepektura_ning_Miyagi.mw
+++ b/Prepektura_ning_Miyagi.mw
@@ -150,7 +150,7 @@ Deni deng balen at barriu kareng balang [[districts of Japan|distritu]]:
 [[pt:Miyagi]]
 [[ro:Prefectura Miyagi]]
 [[ru:Мияги (префектура)]]
-[[sco:Miyagi Prefecture]]
+[[sco:Miyagi Prefectur]]
 [[simple:Miyagi Prefecture]]
 [[sk:Mijagi (prefektúra)]]
 [[sr:Префектура Мијаги]]
