--- a/El_Nido.mw
+++ b/El_Nido.mw
@@ -65,6 +65,7 @@ Ing '''El Nido'''  pang4 yang klasing [[Balen Filipinas|balen]] king [[Lalawigan
 *[http://ewdm.net/el.nido.accommodation.html ACCOMMODATION IN EL NIDO]
 *[http://ewdm.net/el.nido.restaurants.html EL NIDOS RESTAURANTS]
 *[http://ewdm.net/el.nido.diving.html  DIVING IN EL NIDO]
+*[http://www.palawanhotels.org  EL NIDO]
 *[http://ewdm.net/el.nido.buses.html  BUS TIMES FOR EL NIDO]
 *[http://ewdm.net/el.nido.ferrys.html FERRY TIMES FOR EL NIDO] 
 *[http://ewdm.net/el.nido.contact.html EMAIL INFORMATION CONTACT FOR EL NIDO] 
