/* Suglung Palual */The Beatles in Creative Commons

--- a/Beatles.mw
+++ b/Beatles.mw
@@ -60,6 +60,7 @@ Deng '''The Beatles''' metung lang [[pop music|pop]] ampong [[rock music|rock]] 
 * [http://www.geocities.com/~beatleboy1/ The Beatles Interviews Database]
 * {{Last.fm|the+beatles|The Beatles}}
 * [http://tsort.info/music/6hsv00.htm The Beatles songs in the Charts]
+* [http://wiki.creativecommons.org/ART_OF_THE_BEATLES_IN_THE_GLOBAL_LIBRARY The Beatles in Creative Commons] - free audio and video.
 * {{MusicBrainz artist|id=b10bbbfc-cf9e-42e0-be17-e2c3e1d2600d}}
 {{The Beatles}}
 
