*Empty MediaWiki Message*

--- a/Badajoz.mw
+++ b/Badajoz.mw
@@ -4,9 +4,9 @@ spanish_name = Badajoz |
 nickname = |
 city_motto = |
 city_motto_means = |
-image_flag = |
-image_flag_size = |
-image_coat_of_arms = Badajoz city escudo.svg|
+image_flag = Flag of Badajoz.svg|
+image_flag_size = 150px|
+image_coat_of_arms = Provincia de Badajoz - Escudo.svg|
 image_coat_of_arms_size = 100px|
 image_city_map = Badajoz, Spain location.png|
 image_city_map_size = 270px|
