--- a/Disiembri_30.mw
+++ b/Disiembri_30.mw
@@ -6,6 +6,7 @@ Ing '''[[Disiembri 30]]''' ya ing pang 364 a aldo ning banua keng [[Gregorian Ca
 
 == Ding Kebaitan ==
 ==Ding Kematyan==
+Sing Goes Doer ( Presidente of Indonesiana )
 
 == Kapagmasusian ==
 
