--- a/Laguna.mw
+++ b/Laguna.mw
@@ -137,6 +137,11 @@ Ing Laguna atin yang 27 [[Ding Balen ning Filipinas|balen]] at  3 [[Ding Lakanba
 * [http://www.laguna.gov.ph Official Website of the Provincial Government of Laguna]
 * [http://www.cavinti.com Cavinti, Laguna Philippines]
 * [http://bayangpinagpala.blogspot.com Pila, Laguna, Philippines]
+* [http://likhalaguna.blogspot.com/ Likha Laguna]
+* [http://mylaguna.blogspot.com/ Laguna Web Magazine]
+
+
+
 
 {{Laguna}}
 
