r2.6.5) (robot Añadido: [[fr:Tiruppur]]

--- a/Tirupur.mw
+++ b/Tirupur.mw
@@ -61,6 +61,7 @@ Ing '''Tirupur''' ([[Tamil language|Tamil]]: திருப்பூர்) met
 [[en:Tirupur]]
 [[es:Tirupur]]
 [[fa:تیروپور]]
+[[fr:Tiruppur]]
 [[hi:तिरूपुर]]
 [[it:Tirupur]]
 [[kn:ತಿರುಪ್ಪೂರು]]
