*Empty MediaWiki Message*

--- a/Category:Aichi_Prefecture.mw
+++ b/Category:Aichi_Prefecture.mw
@@ -28,6 +28,7 @@
 [[pt:Categoria:Província de Aichi]]
 [[ru:Категория:Префектура Айти]]
 [[su:Kategori:Prèfèktur Aichi]]
+[[sv:Kategori:Aichi prefektur]]
 [[sw:Jamii:Mkoa wa Aichi]]
 [[tl:Kategorya:Prepektura ng Aichi]]
 [[tr:Kategori:Aichi ili]]
