--- a/Indigenous_Tweets.mw
+++ b/Indigenous_Tweets.mw
@@ -27,3 +27,4 @@ Manipun yang data ing Indigenous Tweets kapamilatan ning [[application programmi
 [[Category:Twitter]
 
 [[en:Indigenous Tweets]]]
+[[war:Indigenous Tweets]]
