*Empty MediaWiki Message*

--- a/Indigenous_Tweets.mw
+++ b/Indigenous_Tweets.mw
@@ -24,7 +24,7 @@ Manipun yang data ing Indigenous Tweets kapamilatan ning [[application programmi
 
 [[Category:Internet properties established in 2011]]
 [[Category:Linguistics]]
-[[Category:Twitter]
+[[Category:Twitter]]
 
-[[en:Indigenous Tweets]]]
+[[en:Indigenous Tweets]]
 [[war:Indigenous Tweets]]
