The file [[:Image:0427wn.jpg]] has been replaced by [[:Image:Inside_the_terminal_at_Francisco_Bangoy_International_Airport_(August_18_2005).jpg]] by administrator [[:commons:User:Trijnstel]]: ''[[commons:Commons:File renaming|File renamed]]: old name

--- a/Dábo.mw
+++ b/Dábo.mw
@@ -25,7 +25,7 @@ Agpang keng [[2000]] sensus, atin yang populasyun a 1,147,116 a katau kareng 240
 
 
 
-[[File:0427wn.jpg|right|thumb|Kilub ning Davao International Airport]]
+[[File:Inside_the_terminal_at_Francisco_Bangoy_International_Airport_(August_18_2005).jpg|right|thumb|Kilub ning Davao International Airport]]
 
 1. Ateneo de Davao University (AdDU)<br />[[File:addu101.jpg|thumb|Ateneo De Davao University]]
 2. University of the Philippines - Mindanao (UPMin)<br />
