*Empty MediaWiki Message*

--- a/Brasil.mw
+++ b/Brasil.mw
@@ -15,7 +15,7 @@
 |largest_city = [[São Paulo]]
 |government_type = [[Federal republic|Federal&nbsp;republic]]
 |leader_titles = &nbsp;• [[President of Brazil|President]]<br /> &nbsp;• [[Vice President of Brazil|Vice&nbsp;President]]
-|leader_names =[[Luiz Inácio Lula da Silva]]<br />[[José Alencar Gomes da Silva]]
+|leader_names =[[Dilma Rousseff]]<br />[[Michel Temer]]
 |area_rank =  5th
 |area_magnitude = 1 E12
 |area= 8,514,877
