r2.6.5) (robot Modificado: [[ia:Aragon]]

--- a/Aragon.mw
+++ b/Aragon.mw
@@ -51,8 +51,6 @@ Ing '''Aragon''', keng [[Spanish language|Spanish]] at [[Aragonese language|Arag
 [[Category:Autonomous communities of Spain]]
 [[Category:NUTS 2 statistical regions of the European Union]]
 
-[[kbd:Арагон]]
-
 [[an:Aragón]]
 [[ar:منطقة أراغون ذاتية الحكم]]
 [[arz:اراجون]]
@@ -88,13 +86,14 @@ Ing '''Aragon''', keng [[Spanish language|Spanish]] at [[Aragonese language|Arag
 [[hr:Aragonija]]
 [[hu:Aragónia]]
 [[hy:Արագոն]]
-[[ia:Aragón]]
+[[ia:Aragon]]
 [[id:Aragon]]
 [[io:Aragono]]
 [[it:Aragona]]
 [[ja:アラゴン州]]
 [[jv:Aragon]]
 [[ka:არაგონი]]
+[[kbd:Арагон]]
 [[ko:아라곤 지방]]
 [[krc:Арагон]]
 [[kw:Aragon]]
