*Empty MediaWiki Message*

--- a/Diosdado_Macapagal_International_Airport.mw
+++ b/Diosdado_Macapagal_International_Airport.mw
@@ -26,7 +26,7 @@ runway_length_m=3,200|
 runway_surface=[[Concrete]]|
 }}
 {{Airport end frame}}
-Ing '''Diosdado Macapagal International Airport''' ('''DMIA'''), mayayaus mu rin '''Clark International Airport''' {{Airport codes|CRK|RPLC}}, iya ing peka airport a masilbi keng makaleleng [[Clark Special Economic Zone]] (CSEZ) at ning makalapit a [[Angeles Lakanbalen]] king [[Filipinas]].
+Ing '''Sulapawang Internasyonal ning Diosdado Macapagal''' (amanung Ingles: '''Diosdado Macapagal International Airport''' ('''DMIA''')), mayayaus mu rin '''Sulapawang Internasyonal ning Clark''' (amanung Ingles: '''Clark International Airport''' {{Airport codes|CRK|RPLC}}), iya ing peka airport a masilbi keng makaleleng [[Clark Special Economic Zone]] (CSEZ) at ning makalapit a [[Angeles Lakanbalen]] king [[Filipinas]].
 
 Atiu king CSEZ dati airfield ning [[Clark Air Base]], a sera ra ding [[U.S. Air Force]] inyang [[1991]] kaibat mamakbung ya ing [[Bulkang Pinatubo]], kaibat lininis da at biklat dang pasibayu bilang CSEZ. 
 
