*Empty MediaWiki Message*

--- a/Template:Deng_sulapawan_ning_Vietnam.mw
+++ b/Template:Deng_sulapawan_ning_Vietnam.mw
@@ -1,5 +1,5 @@
 {{Navbox
-|name  = Mga paliparan sa Vietnam
+|name  = Deng sulapawang ning Vietnam
 |title = {{flagicon|Vietnam}} [[Mga paliparan sa Vietnam]]
 |groupstyle = text-align:left;
 |liststyle = padding:0.25em 0; line-height:1.4em; <!--otherwise lists can appear to form continuous whole-->
