*Empty MediaWiki Message*

--- a/Template:Deng_sulapawan_ning_Vietnam.mw
+++ b/Template:Deng_sulapawan_ning_Vietnam.mw
@@ -1,6 +1,6 @@
 {{Navbox
-|name  = Deng sulapawang ning Vietnam
-|title = {{flagicon|Vietnam}} [[Mga paliparan sa Vietnam]]
+|name  = Deng sulapawan ning Vietnam
+|title = {{flagicon|Vietnam}} [[Deng sulapawan ning Vietnam]]
 |groupstyle = text-align:left;
 |liststyle = padding:0.25em 0; line-height:1.4em; <!--otherwise lists can appear to form continuous whole-->
 
@@ -20,7 +20,7 @@
 
 }}<noinclude>
 
-[[Category:Mga paliparan sa Vietnam]]
+[[Category:Deng sulapawan ning Vietnam]]
 [[ace:Pola:Bandar Udara Viètnam]]
 [[af:Sjabloon:Lughawens in Viëtnam]]
 [[cs:Šablona:Letiště ve Vietnamu]]
