*Empty MediaWiki Message*

--- a/Tan_Son_Nhat_International_Airport.mw
+++ b/Tan_Son_Nhat_International_Airport.mw
@@ -67,7 +67,9 @@ Deng tutuking airlines a susuyu keng Tan Son Nhat Airport (agpang Eneru 2010):
 == Note ==
 <references/>
 
-[[Category:Mga paliparan sa Vietnam]]
+{{Deng sulapawan ning Vietnam}}
+
+[[Category:Deng sulapawan ning Vietnam]]
 
 [[ace:Bandar Udara Anrarabangasa Tan Son Nhat]]
 [[af:Tan Son Nhat Internasionale Lughawe]]
