*Empty MediaWiki Message*

--- a/Dong_Hoi_Airport.mw
+++ b/Dong_Hoi_Airport.mw
@@ -29,10 +29,12 @@ Deng tutuking airlines a susuyu keng Dong Hoi Airport (agpang Eneru 2008):
 
 * [[Vietnam Airlines]] ([[Hanoi]], [[Ho Chi Minh Lakanbalen]])
 
-== External links ==
+== Sugyung palwal ==
 * [http://www.footprintsvietnam.com/travel_news/2008/May/DongHoi-Airport.htm Dong Hoi airport put into use]
 
-[[Category:Mga paliparan sa Vietnam]]
+{{Deng sulapawan ning Vietnam}}
+
+[[Category:Deng sulapawan ning Vietnam]]
 [[Category:Quang Binh]]
 
 [[ace:Bandar Udara Dong Hoi]]
