*Empty MediaWiki Message*

--- a/Asturias.mw
+++ b/Asturias.mw
@@ -24,10 +24,10 @@
 |autonomy = [[January 11]], [[1982]]
 |congress = 8
 |senate = 6 (4 elected, 2 appointed)
-|president = [[Vicente Alberto Álvarez Areces]] ([[Partido Socialista Obrero Español|PSOE]])
+|president = [[Francisco Álvarez-Cascos Fernández]] ([[Foro|Asturias FAC]])
 |president-link = List of Asturian Presidents
 |code = O
-|website = [http://www.princast.es/ Gobierno del Principado de Asturias]
+|website = [http://www.asturias.es/ Gobierno del Principado de Asturias]
 |[http://www.infoasturias.com/ Tourist Information Principality of Asturias]
 }}
 [[File:TraditionalHorreo.jpg|right|thumbnail|225px|Traditional '[[horreo|horru]]' grain barn, Parque Natural de Redes. December 2004]]
