*Empty MediaWiki Message*

--- a/Template:Deng_sulapawan_ning_Vietnam.mw
+++ b/Template:Deng_sulapawan_ning_Vietnam.mw
@@ -46,6 +46,6 @@
 [[sv:Mall:Flygplatser i Vietnam]]
 [[tr:Şablon:Vietnam'daki havaalanları]]
 [[vi:Bản mẫu:Sân bay Việt Nam]]
-[[war:Template:Luparan han Viet Nam]]
+[[war:Template:Mga luparan han Vietnam]]
 [[zh:Template:越南機場]]
 </noinclude>
