--- a/Crissotan.mw
+++ b/Crissotan.mw
@@ -1,1 +1,3 @@
-Crissotan -ito ay ginagamit sa filipino
+Crissotan - Meyakwa ya ing taguri king lagyung ginamit nang Crosostomo Soto, "Crissot" king kayang pamanyulat king Literatura. Pauli ning kayang katenakan at katapatan menampang marakal a gawa king Malagung Panyulat Kapampangan, peparangalan neng Don Amado M. Yuzon. Pelagyu ne kaya ing marangle ning pamilaban kaisipan pamamoesiang Kapampangan, inaus neng "Crissotan" ing maulagang dane ning literaturang mesambitla.
+
+*[[Rosa Yumul Ogsimer - Babaying Watas]] Meging "Princesa ning Crissotan" ketang banuang 1930.
