--- a/Varosha.mw
+++ b/Varosha.mw
@@ -9,10 +9,12 @@ Mababanggit ya ing balen king librung ''[[w:The World Without Us|The World Witho
 * [[Prypiat, Ukraine]]
 
 == Suglung palual ==
-{{commons cat}}
+
+* North Cyprus Times: [http://www.zypern.cc/?p=9888 "Maraş - Varosha - Βαρώσια"]
 * [http://groups.msn.com/ReturntoVaroshaFamagustaCyprus/ Return to Varosha]
 * [http://www.michaeltotten.com/archives/000985.html The Ghost City of Cyprus]
 
+{{commons cat}}
 {{Cyprus-geo-stub}}
 
 {{coord|35|07|09|N|33|57|10|E|display=title|region:CY_type:landmark_source:dewiki}}
