r2.6.5) (robot Añadido: [[av:Гьой]]

--- a/Asu.mw
+++ b/Asu.mw
@@ -134,6 +134,7 @@ aliwang bansa nung nu ro tuturing a sese deng asu at e pamangan.
 [[arc:ܟܠܒܐ]]
 [[arz:كلب]]
 [[ast:Perru]]
+[[av:Гьой]]
 [[ay:Anu]]
 [[az:Köpək]]
 [[ba:Эт]]
