*Empty MediaWiki Message*

--- a/Sardinia.mw
+++ b/Sardinia.mw
@@ -22,7 +22,7 @@
 |map               = [[File:Italy Regions Sardinia Map.png|220px|]]
 }}
 [[File:Sardinia satellite.jpg|right|thumb|250px|Satellite image.]]
-[[File:Giudicati of Sardinia 1.svg|right|thumb|250px|The medieval ''giudicati''.]]
+[[File:Giudicati of Sardinia 1 new.svg|right|thumb|250px|The medieval ''giudicati''.]]
 
 == Geograpfia ==
 [[File:Sardinia Provinces.png|thumb|right|250px|Ding Lalawigan ning Sardinia.]]
