--- a/Kalyan-Dombivali.mw
+++ b/Kalyan-Dombivali.mw
@@ -36,18 +36,20 @@ Ing '''Kalyan-Dombivali''' metung yang lakanbalen o ciudad ampong metung a [[w:m
 
 {{Maharashtra-geo-stub}}
 
-[[de:Kalyan-Dombivli]]
-[[en:Kalyan-Dombivali]]
 [[bn:কল্যান-দোম্বিওয়ালি]]
 [[bpy:কল্যান-দোম্বিৱালি]]
+[[de:Kalyan-Dombivli]]
+[[en:Kalyan, India]]
 [[eo:Kaljan-Dombivali]]
 [[fa:کالیان]]
 [[fr:Kalyan]]
 [[ja:カリヤーン]]
+[[ko:칼리얀]]
 [[lt:Kaljanas (miestas)]]
-[[new:कल्याण-दोम्बिभली]]
+[[new:कल्यान]]
 [[nl:Kalyan-Dombivli]]
 [[no:Kalyan-Dombivali]]
 [[pt:Kalyan-Dombivli]]
 [[sv:Kalyan-Dombivli]]
+[[war:Kalyan]]
 [[zh:卡延]]
