*Empty MediaWiki Message*

--- a/Buryatia.mw
+++ b/Buryatia.mw
@@ -37,7 +37,7 @@
 }}
 Ing '''Buryat Republic''' ({{lang-ru|Респу́блика Буря́тия}}; [[Buryat language|Buryat]]: Буряад Республика) metung yang [[federal subjects of Russia|federal subject]] ning [[Russia]] (metung a [[republic]]).  
 
-
+[[File:Buryatia02.png|right|thumb|300px]]
 [[File:Southernburyatia.jpg|right|thumb|300px|Landscape ning mauling Buryatia]]
 
 == Suglung Palwal ==
