--- a/Template:Country_data_South_Korea.mw
+++ b/Template:Country_data_South_Korea.mw
@@ -1,6 +1,6 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
-| alias           = South Korea
-| shortname alias = South Korea
+| alias           = Mauling Korea
+| templatename    = South Korea
 | flag alias      = Flag of South Korea.svg
 | flag alias-unification = Unification flag of Korea.svg{{!}}border
 | countryname = {{{countryname|South Korea<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
