The file [[:Image:Riyad_Farid_Hijab.jpg]] has been removed, as it has been deleted by [[:commons:User:Fastily]]: ''[[commons:COM:OTRS|No permission]] since 6 August 2012''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Riyad_Farid_Hijab.mw
+++ b/Riyad_Farid_Hijab.mw
@@ -2,7 +2,7 @@
 |name           = Riyad Farid Hijab
 |office         = [[Listahan da reng Pun Ministru ning Syria|Pun Ministru ning Syria]]
 |president      = [[Bashar al-Assad]]
-|image          = Riyad Farid Hijab.jpg
+|image          =
 |term_start     = 23 Junio 2012
 |term_end       = 6 Agosto 2012
 |predecessor    = [[Adel Safar]]
