--- a/Template:Country_data_Murcia.mw
+++ b/Template:Country_data_Murcia.mw
@@ -1,5 +1,5 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
-| alias = Region of Murcia
+| alias = Murcia (autonomous community)
 | shortname alias = Murcia
 | flag alias = Flag of the Region of Murcia.svg
 | size = {{{size|}}}
