/* Suglung Palwal */ <references/>

--- a/Canada.mw
+++ b/Canada.mw
@@ -269,6 +269,8 @@ Inyang [[1867]], king pamianib da reng atlung [[British North America]]n colonie
 === Confederasyun ===
 [[File:Canada provinces evolution.gif|thumbnail|left|Pamanalkus ding sepu at lagiu ding lalawigan ning Canada at Territoriu.]]
 
+<references/>
+
 == Suglung Palwal ==
 {{Sisterlinks|Canada}}{{portal}}
 * Project page for the creation of a [[:m:Wikimedia Canada|Canadian local chapter of the Wikimedia Foundation]]
