/* Suglung Palwal */ stub

--- a/Canada.mw
+++ b/Canada.mw
@@ -288,14 +288,10 @@ Inyang [[1867]], king pamianib da reng atlung [[British North America]]n colonie
 * [http://www.dfait-maeci.gc.ca/can-am/washington/ Canadian Embassy - Washington, DC]
 * {{gutenberg author| id=Canada | name=Canada}}
 
-{{Template:Canada}}
-
-{{Template:Canada ties}}
-{{Bangsang geo-stub}}
+{{Canada}}
+{{Canada ties}}
 {{Pangulung  America}}
-
-
-<!-- The below are interlanguage links. -->
+{{Bangsang geo-stub}}
 
 [[Category:Canada| ]]
 [[Category:Former British colonies]]
@@ -307,7 +303,6 @@ Inyang [[1867]], king pamianib da reng atlung [[British North America]]n colonie
 {{Link FA|af}}
 {{Link FA|hu}}
 {{Link FA|vi}}
-
 [[ab:Канада]]
 [[ace:Kanada]]
 [[af:Kanada]]
