r2.7.2) (robot dinagdag: [[kk:Клевалэнд (Огайо)]]

--- a/Cleveland,_Ohio.mw
+++ b/Cleveland,_Ohio.mw
@@ -131,6 +131,7 @@
 [[it:Cleveland]]
 [[ja:クリーブランド (オハイオ州)]]
 [[ka:კლივლენდი]]
+[[kk:Клевалэнд (Огайо)]]
 [[ko:클리블랜드]]
 [[kw:Cleveland, Ohio]]
 [[la:Cleveland]]
