--- a/Colorado_Springs,_Colorado.mw
+++ b/Colorado_Springs,_Colorado.mw
@@ -120,6 +120,6 @@
 [[vi:Colorado Springs, Colorado]]
 [[vo:Colorado Springs]]
 [[war:Colorado Springs, Colorado]]
-[[yo:Colorado Springs, Colorado]]
+[[yo:Colorado Springs]]
 [[zh:科罗拉多斯普林斯]]
 [[zh-min-nan:Colorado Springs]]
