r2.7.2) (robot dinagdag: [[kk:Колумбус (Огайо)]]

--- a/Columbus,_Ohio.mw
+++ b/Columbus,_Ohio.mw
@@ -117,6 +117,7 @@ http://www.census.gov/population/www/estimates/metro_general/2006/CBSA-EST2006-0
 [[it:Columbus (Ohio)]]
 [[ja:コロンバス (オハイオ州)]]
 [[ka:კოლუმბუსი (ოჰაიო)]]
+[[kk:Колумбус (Огайо)]]
 [[ko:콜럼버스 (오하이오 주)]]
 [[ku:Columbus (Ohio)]]
 [[kw:Columbus, Ohio]]
