*Empty MediaWiki Message*

--- a/Tala_da_reng_Menikuang_Dakal_a_Gintung_Medalia_keng_Olympics.mw
+++ b/Tala_da_reng_Menikuang_Dakal_a_Gintung_Medalia_keng_Olympics.mw
@@ -13,9 +13,9 @@ Dakal la reng medaliang keysa kareng aliwang mengapaliari (events), deng bilang 
 ! Banua
 ! Pialung
 ! Gender
-! style="background-color:gold; width:4.0em; font-weight:bold;"| Gold
-! style="background-color:silver; width:4.0em; font-weight:bold;"|Silver
-! style="background-color:#cc9966; width:4.0em; font-weight:bold;"|Bronze
+! style="background-color:gold; width:4.0em; font-weight:bold;"| Gintu
+! style="background-color:silver; width:4.0em; font-weight:bold;"|Pilak
+! style="background-color:#cc9966; width:4.0em; font-weight:bold;"|Tumbaga
 ! style="width:4.0em;"|Kabilugan
 |-
 |-
