*Empty MediaWiki Message*

--- a/Tala_da_reng_Menikuang_Dakal_a_Gintung_Medalia_keng_Olympics.mw
+++ b/Tala_da_reng_Menikuang_Dakal_a_Gintung_Medalia_keng_Olympics.mw
@@ -1,7 +1,7 @@
 Ing bulung a ini lislista na la deng taung meniambut atlu o maiggit pang gintung medalia keng [[Olympics]].
 
 ==Tala da reng atin pekamarakal a Olympic gintung medalia kilub ning karelang karera==
-Iti dake ya da reng '''tala da reng miki marakal a medaliang gintung pang Olympic''', lislista na la deng taung meniambut '''atlu o maiggit pang''' [[Olympic Games|Olympic]] gintung medalia. 
+Iti dake de reng '''tala da reng miki marakal a medaliang gintung pang Olympic''', lislista na la deng taung meniambut '''atlu o maiggit pang''' [[Olympic Games|Olympic]] gintung medalia. 
 
 Dakal la reng medaliang keysa kareng aliwang mengapaliari (events), deng bilang da reng mengapaliari, menaliwa na la kareng mengalabasan a a panaun.
 {| class="wikitable sortable"
