*Empty MediaWiki Message*

--- a/Frankfurt.mw
+++ b/Frankfurt.mw
@@ -28,9 +28,9 @@
 |LOCODE             = DE FRA
 |Gliederung         = 46 districts
 |Website            = [http://www.frankfurt.de/ www.frankfurt.de]
-|Bürgermeister      = [[Petra Roth]]
+|Bürgermeister      = [[Peter Feldmann]]
 |Bürgermeistertitel = [[List of mayors of Frankfurt|Lord Mayor]]
-|Partei             = CDU
+|Partei             = SPD
 |ruling_party1      = CDU
 |ruling_party2      = Green
 |year               = 1st century
