r2.7.2) (robot dinagdag: [[tr:Konsonans]]

--- a/Makikatni.mw
+++ b/Makikatni.mw
@@ -22,80 +22,81 @@ Uling ing bilang dareng katni king sanumang [[alpabetu]], deng [[Linguistics|lin
 [[af:Konsonant]]
 [[als:Konsonant]]
 [[ar:حرف صامت]]
-[[frp:Consona]]
 [[ast:Consonante]]
-[[bn:ব্যঞ্জনধ্বনি]]
 [[be:Зычныя]]
 [[bg:Съгласна]]
+[[bn:ব্যঞ্জনধ্বনি]]
 [[bo:གསལ་བྱེད།]]
 [[br:Kensonenn]]
 [[ca:Consonant]]
-[[cv:Хупă сасăсем]]
 [[cs:Souhláska]]
+[[cv:Хупă сасăсем]]
 [[cy:Cytsain]]
 [[da:Konsonant]]
 [[de:Konsonant]]
-[[et:Kaashäälik]]
 [[el:Σύμφωνο]]
 [[en:Consonant]]
-[[es:Consonante]]
 [[eo:Konsonanto]]
+[[es:Consonante]]
+[[et:Kaashäälik]]
 [[eu:Kontsonante]]
 [[fa:همخوان (آواشناسی)]]
+[[fi:Konsonantti]]
 [[fr:Consonne]]
+[[frp:Consona]]
 [[fy:Konsonant]]
-[[gv:Corockle]]
 [[gd:Connrag]]
 [[gl:Consoante]]
-[[ko:닿소리]]
+[[gv:Corockle]]
+[[he:עיצור]]
 [[hi:व्यंजन वर्ण]]
 [[hr:Suglasnik]]
-[[io:Konsonanto]]
+[[ht:Konsòn]]
+[[hu:Mássalhangzó]]
 [[id:Konsonan]]
+[[io:Konsonanto]]
 [[is:Samhljóð]]
 [[it:Consonante]]
-[[he:עיצור]]
+[[ja:子音]]
 [[jv:Konsonan]]
-[[kn:ವ್ಯಂಜನ]]
 [[ka:თანხმოვანი]]
 [[kk:Дауыссыз дыбыстар]]
-[[kw:Kessonen]]
-[[sw:Konsonanti]]
-[[ht:Konsòn]]
+[[kn:ವ್ಯಂಜನ]]
+[[ko:닿소리]]
 [[ku:Dengdar]]
-[[lo:ພະຍັນຊະນະ]]
+[[kw:Kessonen]]
 [[la:Consonans]]
-[[lv:Līdzskanis]]
-[[lt:Priebalsis]]
-[[ln:Molelisi]]
 [[lmo:Cunsunant]]
-[[hu:Mássalhangzó]]
+[[ln:Molelisi]]
+[[lo:ພະຍັນຊະນະ]]
+[[lt:Priebalsis]]
+[[lv:Līdzskanis]]
 [[mk:Согласка]]
 [[ml:വ്യഞ്ജനം]]
 [[mr:व्यंजन]]
 [[ms:Konsonan]]
 [[nl:Medeklinker]]
-[[ja:子音]]
-[[no:Konsonant]]
 [[nn:Konsonant]]
+[[no:Konsonant]]
 [[pl:Spółgłoska]]
 [[pt:Consoante]]
-[[ro:Consoană]]
 [[qu:Kunkawaki]]
+[[ro:Consoană]]
 [[ru:Согласные]]
+[[sh:Konsonant]]
 [[simple:Consonant]]
 [[sk:Spoluhláska]]
 [[sl:Soglasnik]]
 [[sr:Сугласник]]
-[[sh:Konsonant]]
-[[fi:Konsonantti]]
 [[sv:Konsonant]]
+[[sw:Konsonanti]]
 [[ta:மெய்யொலி]]
 [[th:พยัญชนะ]]
+[[tr:Konsonans]]
 [[uk:Приголосний звук]]
 [[vi:Phụ âm]]
 [[wa:Cossoune]]
 [[war:Mangarabay]]
 [[yi:קאנסאנאנט]]
-[[zh-yue:啞音]]
 [[zh:辅音]]
+[[zh-yue:啞音]]
