The file [[:Image:Guinea_1.jpg]] has been replaced by [[:Image:Two_adult_Guinea_Pigs_(Cavia_porcellus).jpg]] by administrator [[:commons:User:Logan]]: ''[[commons:COM:FR|File renamed]]: Change from completely meaningless names into suitable names, acco...

--- a/Dagis_sungsung.mw
+++ b/Dagis_sungsung.mw
@@ -2,7 +2,7 @@
 {{otheruses}}
 {{Taxobox
 | name               = Dagis sungsung
-| image              = Guinea_1.jpg 
+| image              =Two_adult_Guinea_Pigs_(Cavia_porcellus).jpg 
 | image_width        = 300px
 | regnum             = [[Animal]]ia
 | phylum             = [[Chordate|Chordata]]
