*Empty MediaWiki Message*

--- a/Tala_da_reng_Menikuang_Dakal_a_Gintung_Medalia_keng_Olympics.mw
+++ b/Tala_da_reng_Menikuang_Dakal_a_Gintung_Medalia_keng_Olympics.mw
@@ -20,7 +20,7 @@ Dakal la reng medaliang keysa kareng aliwang mengapaliari (events), deng bilang 
 |-
 |-
 
-| 1 || {{sortname|Michael|Phelps}} || {{flagIOC|USA}} || | [[Swimming at the Summer Olympics|Swimming]] || 2004–2012 || Summer || M || 18 || 2 || 2 || 22
+| 1 || {{sortname|Michael|Phelps}} || {{flagIOC|USA}} || | [[Swimming at the Summer Olympics|Kakawe]] || 2004–2012 || Summer || M || 18 || 2 || 2 || 22
 |-
 | 2 || {{sortname|Larisa|Latynina}} || {{flagIOC|URS}} || | [[Gymnastics at the Summer Olympics|Gymnastics]] || 1956–1964 || Summer || F || 9 || 5 || 4 || 18
 |-
