*Empty MediaWiki Message*

--- a/Andy_Alviz.mw
+++ b/Andy_Alviz.mw
@@ -8,8 +8,6 @@ I '''Andy Alviz''' metung yang [[Philippines|Filipinu]]ng talatigtig ampong mani
 [[Category:Filipino musicians]]
 [[Category:Kapampangan Talatigtig]]
 [[Category:Year of birth missing (living people)]]
-[[Category:Mabieng tau]]
+[[Category:Mabieng Tau]]
 
 {{Philippines-bio-stub}}
-
-[[en:Andy Alviz]]
