*Empty MediaWiki Message*

--- a/Andy_Alviz.mw
+++ b/Andy_Alviz.mw
@@ -11,3 +11,5 @@ I '''Andy Alviz''' metung yang [[Philippines|Filipinu]]ng talatigtig ampong mani
 [[Category:Mabieng Tau]]
 
 {{Philippines-bio-stub}}
+
+[[en:Andy Alviz]]
