als, az, bg, cs, co, en, fa, fr, gl, ko, io, ia, os, it, ka, ku, lv, mk, ja, ro, rmy, ru, sl, sr, sv, tr, tt, zh-yuewiki

--- a/Template:EU_countries.mw
+++ b/Template:EU_countries.mw
@@ -6,6 +6,34 @@
 | Category = 
 }}<noinclude>
 [[Category:International organization navigational boxes|{{PAGENAME}}]]
+[[als:Vorlage:Navigationsleiste EU-Staaten]]
 [[ar:قالب:دول الاتحاد الأوروبي]]
+[[az:Şablon:Aİ]]
+[[bg:Шаблон:Европейски съюз]]
+[[cs:Šablona:EU]]
+[[co:Template:Unione europea]]
+[[en:Template:Members of the European Union (EU)]]
+[[fa:الگو:کشورهای اتحادیه اروپا]]
+[[fr:Modèle:Palette Membres de Union Européenne]]
+[[gl:Modelo:UE]]
+[[ko:틀:유럽 연합]]
+[[ia:Patrono:UE]]
+[[io:Shablono:EU-stati]]
+[[os:Шаблон:ЕЦ]]
+[[it:Template:UnioneEuropea]]
+[[ka:თარგი:ევროპის კავშირის წევრები]]
+[[ku:Şablon:YE]]
+[[lv:Veidne:ES valstis]]
+[[mk:Шаблон:ЕУ членки]]
+[[ja:Template:EU]]
 [[pl:Szablon:Unia Europejska]]
+[[ro:Format:TariUE]]
+[[rmy:Sikavno:EE thema thai zumavde]]
+[[ru:Шаблон:Евросоюз]]
+[[sl:Predloga:Članice EU in kandidatke]]
+[[sr:Шаблон:Државе ЕУ]]
+[[sv:Mall:EU]]
+[[tr:Şablon:Avrupa Birliği]]
+[[tt:Калып:Аурупа берлеге]]
+[[zh-yue:Template:歐盟]]
 </noinclude>
