--- a/Basilio_Augustín.mw
+++ b/Basilio_Augustín.mw
@@ -16,7 +16,7 @@ Y  '''Basilio Augustín y Dávila'''<ref name=Karnow>{{cite-Karnow|Basilio Augus
 ==Dalerayan==
 {{Reflist}}
 
-==suglung Palual==
+==Suglung Palual==
 *[http://www.worldstatesmen.org/Philippines.htm Term dates]
 *{{es icon}} [http://candamo.iespana.es/1898/tierra4.htm Some details of his term of office]
 
